--- a/src/views/Homepage/style.scss
+++ b/src/views/Homepage/style.scss
@@ -6,6 +6,7 @@
     margin-top: 100px;
     @include for-size(phone-only) {
       display: block;
+      margin-top: 50px;
     }
 
     .text-container {
@@ -17,6 +18,10 @@
       .text-sec {
         text-align: left;
         width: 70%;
+
+        @include for-size(phone-only) {
+          margin-bottom: 50px;
+        }
 
         h2 {
           font-size: 35px;
@@ -43,7 +48,11 @@
       width: 40%;
       @include for-size(phone-only) {
         width: 100%;
-        height: 350px;
+        height: 360px;
+
+        img {
+          object-fit: contain !important;
+        }
       }
     }
   }
